# krait

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  labels.yml  release-drafter.yml  release.yml
docs/: astro.config.mjs  language-setup.md  package-lock.json  package.json  tailwind.config.mjs
docs/src/content/docs/: configuration.md  contributing.md  how-it-works.md  output-formats.md  troubleshooting.md
docs/src/content/docs/commands/: daemon.md  diagnostics.md  editing.md  index.md  navigation.md  server.md
docs/src/content/docs/getting-started/: installation.md  monorepo.md  quick-start.md
docs/src/content/docs/languages/: cpp.md  go.md  (+3 more)
docs/src/pages/: index.astro
docs/src/styles/: custom.css  landing.css
pkg/homebrew/: krait.rb
src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  protocol.rs
src/commands/: check.rs  edit.rs  find.rs  fix.rs  format.rs  hover.rs  list.rs  mod.rs  read.rs  rename.rs  search.rs  server.rs  workspace_edit.rs
src/daemon/: lifecycle.rs  mod.rs  server.rs
src/detect/: language.rs  mod.rs  project.rs
src/index/: builder.rs  cache_query.rs  hasher.rs  mod.rs  store.rs  watcher.rs
src/lang/: go.rs  mod.rs  typescript.rs
src/lsp/: client.rs  diagnostics.rs  error.rs  files.rs  install.rs  mod.rs  pool.rs  registry.rs  router.rs  symbols.rs  transport.rs
src/output/: compact.rs  human.rs  json.rs  mod.rs
tests/: e2e_phase1.rs  e2e_phase2.rs  e2e_phase3.rs  e2e_simulation.rs
tests/fixtures/rust-hello/src/: main.rs
tests/fixtures/rust-multi-file/: Cargo.toml
tests/fixtures/rust-multi-file/src/: lib.rs  main.rs
